# eimu_serial_py

./: README.md  build.md  pyproject.toml  read_imu.py
