[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eimu-serial"
version = "1.3.0"
description = "Python serial interface for the Easy IMU (EIMU)"
authors = [
  { name="Example Author", email="author@example.com" },
]
dependencies = ["pyserial"]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]